app/assets/stylesheets/messages.css
.center{
	margin: 0 auto;
	float:none;
}
.mastfoot
{
	max-width: 400px;
	text-align: center;
}
.modal-header
{
    background-color: #FFAE19;
    color:white;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
.nav-link
{
    cursor: pointer;
    cursor: hand;
}
.modal-splash-button
{
    display: inline;
    cursor: pointer;
    cursor: hand;
    margin-left: 20px;
}
.modal-spalsh-buttongroup
{
    margin: 0 auto;
    clear: both;
    text-align: center;
}
body
{
    background-color: #FFAE19;
    padding-top: 70px;
}
.chat_message
{
    width: 80%;
}
.maincontainer
{
    width:100%;
    text-align: center;
}
#chat
{
    overflow:hidden;
    overflow-y:auto;
    max-height: 300px;
}
#yourinfo
{
    color:#333;
}
#theirinfo
{
    color:#333;
}
.collapse
{
    margin-bottom: -4px;
}

.Title
{
    background-color: #FF7148;
}
.Title a
{
    color:#333;
}
.message_input
{
    width: 84%;
}
.nav-link a:hover
{
    color:#ffa500;
}
.message_button
{
    width: 14%;
}
.chat-panel
{
    width: 98%;
    margin: auto;
    margin-top: 100px;
    text-align: left;
    max-height: 400px;
    display: table;
}
.panel-footer
{
    text-align: center;
}
.footer_inner
{
    margin: 0 auto;
    float:none;
}
.collapsing {
    -webkit-transition: none;
    transition: none;
}


#wrapper {
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled {
    padding-left: 250px;
}

#sidebar-wrapper {
    z-index: 1000;
    position: fixed;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    overflow-y: auto;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled #sidebar-wrapper {
    width: 250px;
}

#page-content-wrapper {
    width: 100%;
    position: absolute;
    padding: 15px;
}

#wrapper.toggled #page-content-wrapper {
    position: absolute;
    margin-right: -250px;
}

/* Sidebar Styles */

.sidebar-nav {
    float:left;
    top: 0;
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
}

.sidebar-nav li a:hover {
    text-decoration: none;
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
    height: 65px;
    font-size: 18px;
    line-height: 60px;
}





@media(min-width:768px) {
    .message_input
{
    width: 90%;
}
.message_button
{
    width: 50px;
}
    .chat-panel
    {
        margin: auto;
        width: 700px;
    }

    #wrapper {
        padding-left: 250px;
    }

    #wrapper.toggled {
        padding-left: 0;
    }

    #sidebar-wrapper {
    max-height: 100%;
    margin-top: -100px;
    width:250px;
    }

    #wrapper.toggled #sidebar-wrapper {
        width: 0;
    }

    #page-content-wrapper {
        padding: 20px;
        position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
        position: relative;
        margin-right: 0;
    }
}

@media(min-width:1200px) {
    .chat-panel
    {
        margin: auto;
        width: 1000px;
    }
    .adsbygoogle
    {
    margin-top: 90px;
    }

}

